# astromesh

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  LICENSE.md  Makefile  NOTICE.md  README.md  SECURITY.md  nfpm.yaml  pyproject.toml  skills-lock.json
.claude/: settings.local.json
.github/: CODEOWNERS
astromech/: __init__.py
astromesh/: __init__.py  errors.py  logging_config.py
astromesh-adk/: CHANGELOG.md  pyproject.toml
astromesh-adk/astromesh_adk/: __init__.py  agent.py  callbacks.py  connection.py  context.py  exceptions.py  guardrails.py  mcp.py  memory.py  providers.py  result.py  runner.py  team.py  tools.py
astromesh-adk/astromesh_adk/_internal/: llm_dispatch.py
astromesh-adk/astromesh_adk/cli/: main.py
astromesh-adk/examples/: multi_agent.py  quickstart.py  tools_example.py
astromesh-adk/tests/: conftest.py  test_agent.py  test_callbacks.py  test_cli.py  test_connection.py  test_context.py  test_exceptions.py  test_guardrails_config.py  test_llm_dispatch.py  test_mcp.py  test_memory_config.py  test_providers.py  test_public_api.py  test_result.py  test_runner_callbacks.py  test_runner_local.py  test_runner_parallel.py  test_runner_pipeline.py  test_runner_supervisor.py  test_team.py  test_tools.py  test_tools_pydantic.py
astromesh-cli/: pyproject.toml
astromesh-cli/astromesh_cli/: __init__.py  client.py  main.py
astromesh-cli/astromesh_cli/commands/: agents.py  ask.py  dev.py  doctor.py  mesh.py  metrics.py  new.py  peers.py  providers.py  run.py  services.py  status.py  tools.py  traces.py
astromesh-cli/astromesh_cli/templates/: agent.yaml.j2  tool.py.j2  workflow.yaml.j2
astromesh-cli/tests/: conftest.py  test_client.py  test_main.py  test_output.py
astromesh-cloud/: docker-compose.yaml
astromesh-cloud/api/: Dockerfile  pyproject.toml
astromesh-cloud/api/astromesh_cloud/: config.py  database.py  main.py
astromesh-cloud/api/astromesh_cloud/middleware/: auth.py
astromesh-cloud/api/astromesh_cloud/models/: __init__.py  agent.py  api_key.py  base.py  organization.py  provider_key.py  usage_log.py  user.py
astromesh-cloud/api/astromesh_cloud/routes/: agents.py  auth.py  execution.py  keys.py  organizations.py  usage.py
astromesh-cloud/api/astromesh_cloud/schemas/: agent.py  auth.py  keys.py  organization.py  usage.py
astromesh-cloud/api/astromesh_cloud/services/: agent_service.py  auth_service.py  config_builder.py  encryption.py  reconciliation.py  runtime_proxy.py
astromesh-cloud/api/tests/: conftest.py  test_agent_routes.py  test_auth.py  test_auth_routes.py  test_config_builder.py  test_encryption.py  test_execution_routes.py  test_health.py  test_key_routes.py  test_models.py  test_org_routes.py  test_reconciliation.py  test_runtime_proxy.py  test_schemas.py
astromesh-forge/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
astromesh-node/: README.md  pyproject.toml
astromesh-node/config/profiles/: inference.yaml
astromesh-node/packaging/: build-deb.sh  build-macos.sh  build-rpm.sh  build-windows.ps1  get-astromesh.sh  nfpm.yaml
astromesh-node/packaging/launchd/: com.astromesh.daemon.plist
astromesh-node/packaging/scripts/: install.ps1  install.sh  postremove.sh
astromesh-node/packaging/systemd/: astromeshd.service
astromesh-node/packaging/windows/: astromeshd-service.py
astromesh-node/src/astromesh_node/: __init__.py
astromesh-node/src/astromesh_node/cli/: __init__.py  client.py  main.py  output.py  plugin.py
astromesh-node/src/astromesh_node/cli/commands/: agents.py  ask.py  centinela.py  config.py  dev.py  doctor.py  init.py  mesh.py  metrics.py  new.py  peers.py  providers.py  run.py  services.py  status.py  tools.py  traces.py  validate.py
astromesh-node/src/astromesh_node/daemon/: __init__.py  config.py  core.py
astromesh-node/src/astromesh_node/installer/: __init__.py  base.py  detect.py  linux.py  macos.py  windows.py
astromesh-node/src/astromesh_node/platform/: __init__.py  base.py  detect.py  foreground.py  launchd.py  systemd.py  windows.py
astromesh-node/tests/: conftest.py  test_centinela_cli.py  test_config_observability.py  test_daemon_config.py  test_daemon_core.py  test_installer_base.py  test_installer_linux.py  test_installer_macos.py  test_installer_windows.py  test_platform_base.py  test_platform_detect.py  test_platform_foreground.py  test_platform_launchd.py  test_platform_systemd.py  test_platform_windows.py
astromesh-orbit/: CHANGELOG.md  pyproject.toml
astromesh-orbit/astromesh_orbit/: __init__.py  cli.py  config.py  upgrade.py
astromesh-orbit/astromesh_orbit/core/: provider.py  resources.py
astromesh-orbit/astromesh_orbit/providers/gcp/: __init__.py  gcloud.py  logs.py  provider.py  validators.py
astromesh-orbit/astromesh_orbit/providers/gcp/templates/: artifact_registry.tf.j2  backend.tf.j2  cloud_run.tf.j2  cloud_sql.tf.j2  iam.tf.j2  main.tf.j2  memorystore.tf.j2  monitoring.tf.j2  networking.tf.j2  outputs.tf.j2  secrets.tf.j2  storage.tf.j2  variables.tf.j2
astromesh-orbit/astromesh_orbit/terraform/: backend.py  runner.py
astromesh-orbit/astromesh_orbit/wizard/: defaults.py  interactive.py
astromesh-orbit/docs/: roadmap.md
astromesh-orbit/tests/: conftest.py  test_config.py  test_core.py  test_terraform_runner.py  test_upgrade.py  test_wizard.py
astromesh-orbit/tests/providers/: test_gcp_logs.py  test_gcp_provider.py  test_gcp_templates.py  test_gcp_validators.py
cli/: __init__.py  client.py  main.py  output.py
config/: channels.yaml  providers.yaml  runtime.yaml
daemon/: __init__.py  astromeshd.py
docker/: Dockerfile  Dockerfile.gpu  docker-compose.gossip.yml  docker-compose.mesh.yml  docker-compose.yaml  entrypoint.sh  init.sql  otel-config.yaml  prometheus.yml
docs-site/: .gitignore  astro.config.mjs  package-lock.json  package.json
native/: Cargo.toml
native/src/: chunking.rs  cost_tracker.rs  guardrails.rs  json_parser.rs  lib.rs  ratelimit.rs  routing.rs  tokens.rs
(+787 files in other folders)
