[project]
name = "astromesh"
version = "0.23.8"
description = "Astromesh Agent Runtime Platform — multi-model, multi-pattern AI agent runtime"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
redis = ["redis[hiredis]>=5.0.0"]
postgres = ["asyncpg>=0.30.0"]
sqlite = ["aiosqlite>=0.20.0"]
chromadb = ["chromadb>=0.5.0"]
qdrant = ["qdrant-client>=1.11.0"]
faiss = ["faiss-cpu>=1.8.0"]
embeddings = ["sentence-transformers>=3.0.0"]
onnx = ["onnxruntime>=1.19.0"]
ml = ["torch>=2.0.0"]
observability = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "prometheus-client>=0.21.0",
]
mcp = ["mcp>=1.0.0"]
mesh = ["psutil>=5.9.0"]
all = [
    "astromesh[redis,postgres,sqlite,chromadb,qdrant,faiss,embeddings,onnx,observability,mcp,mesh]",
]
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "respx>=0.21.0",
    "ruff>=0.6.0",
    "pytest-benchmark>=4.0",
    "asgi-lifespan>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["benchmark: marks tests as benchmarks (deselect with '-m \"not benchmark\"')"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.10.0"
version_files = [
    "pyproject.toml:version",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_start_rev = "4545130"

[tool.maturin]
manifest-path = "native/Cargo.toml"
module-name = "astromesh._native"
python-source = "."
features = ["pyo3/extension-module"]
