[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astromesh-adk"
version = "0.1.4"
description = "Agent Development Kit for the Astromesh runtime"
requires-python = ">=3.12"
dependencies = [
    "astromesh>=0.17.2",
    "httpx>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[tool.uv.sources]
astromesh = { path = "..", editable = true }

[project.optional-dependencies]
dev = ["watchfiles>=0.21.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "respx>=0.21.0"]
all = ["astromesh-adk[dev,test]"]

[project.scripts]
astromesh-adk = "astromesh_adk.cli.main:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
