[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astromesh-cli"
version = "0.1.0"
description = "CLI tool for managing Astromesh nodes and clusters"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "astromesh>=0.18.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
]

[tool.uv.sources]
astromesh = { path = "..", editable = true }

[project.optional-dependencies]
dev = ["watchfiles>=0.21.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "respx>=0.21.0"]
all = ["astromesh-cli[dev,test]"]

[project.scripts]
astromeshctl = "astromesh_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["astromesh_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
