[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "astromesh-node"
version = "0.1.0"
description = "Cross-platform system installer and daemon for the Astromesh agent runtime"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "astromesh>=0.18.0",
    "astromesh-cli>=0.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[tool.uv.sources]
astromesh = { path = "..", editable = true }
astromesh-cli = { path = "../astromesh-cli", editable = true }

[project.optional-dependencies]
systemd = ["sdnotify>=0.3.0"]
windows = ["pywin32>=306"]
dev = ["watchfiles>=0.21.0"]
test = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0"]
all = ["astromesh-node[systemd,dev,test]"]

[project.scripts]
astromeshd = "astromesh_node.daemon.core:main"

[project.entry-points."astromeshctl.plugins"]
node = "astromesh_node.cli.plugin:register"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
